feat: chinh sua front, back thanh object